tests/snapshots/sizes__save_query_prompt_60x16.snap
---
source: tests/sizes.rs
assertion_line: 229
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…             ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────┐
│  FROM users                                              │
│  WHERE plan = 'pro'                                      │
│  ORDER BY created_at DESC;                               │
└┌ save query · enter persist · esc cancel ───────────────┐┘
┌│name:                                                   │┐
││select-id-email-plan-created_at                         ││
││                                                        ││
│└────────────────────────────────────────────────────────┘│
│3   grace@example.com      pro   2026-02-01 08:30:00+00   │
│4   alan@example.com       team  2026-02-17 19:05:00+00   │
│5   edsger@example.com     free  2026-03-03 11:22:00+00   │
└──────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   save query · enter persist · esc cancel
