tests/snapshots/sizes__save_query_prompt_80x24.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2 (demo)
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                          │
│  FROM users                                                                  │
│  WHERE plan = 'pro'                                                          │
│  ORDER BY created_at DESC;                                                   │
└──────────────────────────────────────────────────────────────────────────────┘
┌ result · 6 row(s) ───────────────────────────────────────────────────────────┐
│id  email                  plan  created_at                                   │
│1   ┌ save query · enter persist · esc cancel ───────────────────────────┐    │
│2   │name:                                                               │    │
│3   │select-id-email-plan-created_at                                     │    │
│4   │                                                                    │    │
│5   └────────────────────────────────────────────────────────────────────┘    │
│6   katherine@example.com  pro   2026-03-21 16:40:00+00                       │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   save query · type a name · enter persist · esc cancel
