tests/snapshots/sizes__saved_queries_120x40.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2 (demo)
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                                                  │
│  FROM users                                                                                                          │
│  WHERE plan = 'pro'                                                                                                  │
│  ORDE┌ saved queries — enter load · r rename · d delete · / search · q close ────────────────────────────────┐       │
└──────│  pro-users                     SELECT id, email, created_at FROM users WHERE plan = 'pro' ORDER BY cre│───────┘
┌ resul│  order-by-id                   SELECT * FROM orders WHERE id = :order_id;                             │───────┐
│id  em│  daily-revenue                 SELECT date_trunc('day', created_at) AS day,        sum(total_cents) / │       │
│1   ad│                                                                                                       │       │
│2   li│                                                                                                       │       │
│3   gr│                                                                                                       │       │
│4   al│                                                                                                       │       │
│5   ed│                                                                                                       │       │
│6   ka│                                                                                                       │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      │  pro-users                                                                                            │       │
│      │  SELECT id, email, created_at                                                                         │       │
│      │  FROM users                                                                                           │       │
│      │  WHERE plan = 'pro'                                                                                   │       │
│      │  ORDER BY created_at DESC;                                                                            │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      │                                                                                                       │       │
│      └───────────────────────────────────────────────────────────────────────────────────────────────────────┘       │
│                                                                                                                      │
│                                                                                                                      │
│                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   saved queries · 3 entries
