tests/snapshots/sizes__saved_queries_200x50.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                                                                                                                                  │
│  FROM users                                                                                                                                                                                          │
│  WHERE plan = 'pro'                                                                                                                                                                                  │
│  ORDER BY created_at DESC;                                                                                                                                                                           │
└───────────┌ saved queries — enter load · r rename · d delete · / search · q close ───────────────────────────────────────────────────────────────────────────────────────────────────────┐───────────┘
┌ result · 6│  pro-users                     SELECT id, email, created_at FROM users WHERE plan = 'pro' ORDER BY created_at D                                                              │───────────┐
│id  email  │  order-by-id                   SELECT * FROM orders WHERE id = :order_id;                                                                                                    │           │
│1   ada@exa│  daily-revenue                 SELECT date_trunc('day', created_at) AS day,        sum(total_cents) / 100.0 AS                                                               │           │
│2   linus@e│                                                                                                                                                                              │           │
│3   grace@e│                                                                                                                                                                              │           │
│4   alan@ex│                                                                                                                                                                              │           │
│5   edsger@│                                                                                                                                                                              │           │
│6   katheri│                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │  pro-users                                                                                                                                                                   │           │
│           │  SELECT id, email, created_at                                                                                                                                                │           │
│           │  FROM users                                                                                                                                                                  │           │
│           │  WHERE plan = 'pro'                                                                                                                                                          │           │
│           │  ORDER BY created_at DESC;                                                                                                                                                   │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           │                                                                                                                                                                              │           │
│           └──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘           │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
│                                                                                                                                                                                                      │
└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   saved queries · 3 entries
