tests/snapshots/sizes__saved_queries_60x16.snap
---
source: tests/sizes.rs
assertion_line: 229
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
 1 SELECT id, email,…             ctrl-t new · ctrl-w close
┌ editor (e to focus) ─────────────────────────────────────┐
│  F┌ saved queries — enter load · r rename · d delete ┐   │
│  W│  pro-users                     SELECT id, email, │   │
│  O│  order-by-id                   SELECT * FROM orde│   │
└───│  daily-revenue                 SELECT date_trunc(│───┘
┌ re│                                                  │───┐
│id │                                                  │   │
│1  │  pro-users                                       │   │
│2  │  SELECT id, email, created_at                    │   │
│3  │  FROM users                                      │   │
│4  └──────────────────────────────────────────────────┘   │
│5   edsger@example.com     free  2026-03-03 11:22:00+00   │
└──────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   saved queries · 3 entries
