tests/snapshots/sizes__saved_queries_80x24.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2 (demo)
┌ editor (e to focus) ─────────────────────────────────────────────────────────┐
│> SE┌ saved queries — enter load · r rename · d delete · / search · q clo┐    │
│  FR│  pro-users                     SELECT id, email, created_at FROM us│    │
│  WH│  order-by-id                   SELECT * FROM orders WHERE id = :ord│    │
│  OR│  daily-revenue                 SELECT date_trunc('day', created_at)│    │
└────│                                                                    │────┘
┌ res│                                                                    │────┐
│id  │                                                                    │    │
│1   │                                                                    │    │
│2   │  pro-users                                                         │    │
│3   │  SELECT id, email, created_at                                      │    │
│4   │  FROM users                                                        │    │
│5   │  WHERE plan = 'pro'                                                │    │
│6   │  ORDER BY created_at DESC;                                         │    │
│    │                                                                    │    │
│    │                                                                    │    │
│    │                                                                    │    │
│    │                                                                    │    │
│    │                                                                    │    │
│    └────────────────────────────────────────────────────────────────────┘    │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   saved queries · 3 entries
