tests/snapshots/sizes__saved_queries_filter_100x30.snap
---
source: tests/sizes.rs
expression: dump(&buf)
---
 pgman │ shop  connected · pg 16.2
┌ editor (e to focus) ─────────────────────────────────────────────────────────────────────────────┐
│> SELECT id, email, plan, created_at                                                              │
│  FROM users                                                                                      │
│  WHE┌ saved queries — /d  (3/3 shown) · enter load · esc clear ────────────────────────────┐     │
│  ORD│  pro-users                     SELECT id, email, created_at FROM users WHERE plan = '│     │
│     │  order-by-id                   SELECT * FROM orders WHERE id = :order_id;            │     │
└─────│  daily-revenue                 SELECT date_trunc('day', created_at) AS day,        su│─────┘
┌ resu│                                                                                      │─────┐
│id  e│                                                                                      │     │
│1   a│                                                                                      │     │
│2   l│                                                                                      │     │
│3   g│                                                                                      │     │
│4   a│                                                                                      │     │
│5   e│                                                                                      │     │
│6   k│  pro-users                                                                           │     │
│     │  SELECT id, email, created_at                                                        │     │
│     │  FROM users                                                                          │     │
│     │  WHERE plan = 'pro'                                                                  │     │
│     │  ORDER BY created_at DESC;                                                           │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     │                                                                                      │     │
│     └──────────────────────────────────────────────────────────────────────────────────────┘     │
│                                                                                                  │
│                                                                                                  │
└──────────────────────────────────────────────────────────────────────────────────────────────────┘
 RO   TAP   N+1 ×1   filter saved queries · type to narrow
